--- a/FE/index.html
+++ b/FE/index.html
@@ -2,9 +2,66 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Group 16.png" />
+    <link rel="icon" type="image/svg+xml" href="/browserlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mums Charcoal and Grill</title>
+    <title>Mum's Charcoal & Grill</title>
+    <meta
+      name="description"
+      content="Mom's Charcoal & Grill serves charcoal-fired classics, signature sauces, and full-service catering in North Brunswick, NJ, with online ordering for takeout and delivery."
+    />
+    <meta
+      name="keywords"
+      content="charcoal grill, North Brunswick restaurant, catering, takeout, American barbecue, Mom's Charcoal & Grill"
+    />
+    <meta name="robots" content="index,follow" />
+    <meta property="og:type" content="restaurant.restaurant" />
+    <meta property="og:title" content="Mom's Charcoal & Grill | Charcoal Grilled Eats & Catering" />
+    <meta
+      property="og:description"
+      content="Mom's Charcoal & Grill delivers charcoal-fired dishes, sauces, and catering from North Brunswick, NJ. Browse the menu, order online, and let us fuel your next gathering."
+    />
+    <meta property="og:url" content="https://mumscharcoalandgrill.com.au/" />
+    <meta property="og:image" content="https://mumscharcoalandgrill.com.au/browserlogo.png" />
+    <meta property="og:site_name" content="Mom's Charcoal & Grill" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Mom's Charcoal & Grill | Charcoal Grilled Eats & Catering" />
+    <meta
+      name="twitter:description"
+      content="Charcoal-grilled favorites, catering, and sauces from Mom's Charcoal & Grill in North Brunswick, NJ—order online for pickup and delivery."
+    />
+    <meta name="twitter:image" content="https://mumscharcoalandgrill.com.au/browserlogo.png" />
+    <link rel="canonical" href="https://mumscharcoalandgrill.com.au/" />
+    <meta name="theme-color" content="#111111" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Restaurant",
+        "name": "Mom's Charcoal & Grill",
+        "url": "https://mumscharcoalandgrill.com.au/",
+        "logo": "https://mumscharcoalandgrill.com.au/browserlogo.png",
+        "image": "https://mumscharcoalandgrill.com.au/browserlogo.png",
+        "description": "Charcoal-grilled classics, sauces, and catering with online ordering from Mom's Charcoal & Grill in North Brunswick, NJ.",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "2215 US Highway 1 South",
+          "addressLocality": "North Brunswick",
+          "addressRegion": "NJ",
+          "postalCode": "08902",
+          "addressCountry": "US"
+        },
+        "telephone": "+1-732-398-9022",
+        "servesCuisine": ["American", "Grill", "Barbecue"],
+        "priceRange": "$$",
+        "contactPoint": [
+          {
+            "@type": "ContactPoint",
+            "contactType": "customer support",
+            "telephone": "+1-732-398-9022",
+            "email": "support@momsgrill.com"
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
