--- a/FE/index.html
+++ b/FE/index.html
@@ -2,67 +2,69 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/browserlogo.png" />
+    <link rel="icon" type="image/png" href="/browserlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mum's Charcoal & Grill</title>
+
+    <title>Mum's Charcoal &amp; Grill</title>
+
     <meta
       name="description"
-      content="Mom's Charcoal & Grill serves charcoal-fired classics, signature sauces, and full-service catering in North Brunswick, NJ, with online ordering for takeout and delivery."
+      content="Mum's Charcoal &amp; Grill serves charcoal-fired favourites, signature sauces, and catering in Pialba, QLD—order online for pickup and delivery."
     />
     <meta
       name="keywords"
-      content="charcoal grill, North Brunswick restaurant, catering, takeout, American barbecue, Mom's Charcoal & Grill"
+      content="charcoal grill, Pialba restaurant, Hervey Bay, catering, takeout, delivery, Mum's Charcoal & Grill"
     />
     <meta name="robots" content="index,follow" />
+
+    <!-- Open Graph -->
     <meta property="og:type" content="restaurant.restaurant" />
-    <meta property="og:title" content="Mom's Charcoal & Grill | Charcoal Grilled Eats & Catering" />
+    <meta property="og:title" content="Mum's Charcoal &amp; Grill | Charcoal Grilled Eats &amp; Catering" />
     <meta
       property="og:description"
-      content="Mom's Charcoal & Grill delivers charcoal-fired dishes, sauces, and catering from North Brunswick, NJ. Browse the menu, order online, and let us fuel your next gathering."
+      content="Charcoal-fired favourites, sauces, and catering from Mum's Charcoal &amp; Grill in Pialba, QLD. Browse the menu and order online."
     />
     <meta property="og:url" content="https://mumscharcoalandgrill.com.au/" />
     <meta property="og:image" content="https://mumscharcoalandgrill.com.au/browserlogo.png" />
-    <meta property="og:site_name" content="Mom's Charcoal & Grill" />
+    <meta property="og:site_name" content="Mum's Charcoal &amp; Grill" />
+
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Mom's Charcoal & Grill | Charcoal Grilled Eats & Catering" />
+    <meta name="twitter:title" content="Mum's Charcoal &amp; Grill | Charcoal Grilled Eats &amp; Catering" />
     <meta
       name="twitter:description"
-      content="Charcoal-grilled favorites, catering, and sauces from Mom's Charcoal & Grill in North Brunswick, NJ—order online for pickup and delivery."
+      content="Charcoal-grilled favourites, catering, and sauces from Mum's Charcoal &amp; Grill in Pialba, QLD—order online for pickup and delivery."
     />
     <meta name="twitter:image" content="https://mumscharcoalandgrill.com.au/browserlogo.png" />
+
     <link rel="canonical" href="https://mumscharcoalandgrill.com.au/" />
     <meta name="theme-color" content="#111111" />
+
+    <!-- LocalBusiness / Restaurant Schema -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Restaurant",
-        "name": "Mom's Charcoal & Grill",
+        "name": "Mum's Charcoal & Grill",
         "url": "https://mumscharcoalandgrill.com.au/",
         "logo": "https://mumscharcoalandgrill.com.au/browserlogo.png",
         "image": "https://mumscharcoalandgrill.com.au/browserlogo.png",
-        "description": "Charcoal-grilled classics, sauces, and catering with online ordering from Mom's Charcoal & Grill in North Brunswick, NJ.",
+        "description": "Charcoal-fired favourites, sauces, and catering with online ordering from Mum's Charcoal & Grill in Pialba, QLD.",
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "2215 US Highway 1 South",
-          "addressLocality": "North Brunswick",
-          "addressRegion": "NJ",
-          "postalCode": "08902",
-          "addressCountry": "US"
+          "streetAddress": "Pialba Place Shopping Centre, Old Maryborough Rd",
+          "addressLocality": "Pialba",
+          "addressRegion": "QLD",
+          "postalCode": "4655",
+          "addressCountry": "AU"
         },
-        "telephone": "+1-732-398-9022",
-        "servesCuisine": ["American", "Grill", "Barbecue"],
-        "priceRange": "$$",
-        "contactPoint": [
-          {
-            "@type": "ContactPoint",
-            "contactType": "customer support",
-            "telephone": "+1-732-398-9022",
-            "email": "support@momsgrill.com"
-          }
-        ]
+        "hasMap": "https://www.google.com/maps/search/?api=1&query=Pialba+Place+Shopping+Centre%2C+Old+Maryborough+Rd%2C+Pialba+QLD+4655",
+        "servesCuisine": ["Grill", "Barbecue"],
+        "priceRange": "$$"
       }
     </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
